--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Video Games</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="library">
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
